--- a/Responsive site/css/style.css
+++ b/Responsive site/css/style.css
@@ -11,8 +11,6 @@
 }
 
 body{
-  /* font-family: "Roboto", Helvetica, sans-serif; */
-  /* margin: 0; */
   text-align: center;
     }
 
@@ -23,22 +21,23 @@ main {
 
 .boxClass{
   width: 100%;
-  height: 40vh;
+  height: 20vh;
   padding-top: 200px;
   font-family: "Montserrat", Arial,sans-serif;
   font-weight: bolder;
   font-size: 2.5em;
-  /* color: crimson; */
-  color: rgb(255,127,80);
+  color: rgb(178,34,34);
   text-decoration: none;
-  text-align: center;
+  text-align: justify;
 }
+
 #box1 {
-    background-position: 15%;
+  background-position: 15%;
   background-repeat: no-repeat;
   background-size: cover;
   filter: opacity(.7);
   background-image: url("../images/book.jpg");
+  box-shadow: inset 0px 0px 10px 10px #CD853F;
 }
 
 #box1info {
@@ -56,30 +55,28 @@ main {
   background-position: 15%;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: inset 0px 0px 5px 5px #CD853F;
 }
 
 #box2info {
   width: 80%;
   height: auto;
   margin: 0 auto;
-  /* color: black; */
-}
+  }
 
 #box3 {
-  /* background-color: lightslategrey; */
-  /* background-image: url("../images/candlelights_unsplash.jpg"); */
   background-position: 15%;
   background-repeat: no-repeat;
   background-size: cover;
   filter: opacity(.7);
   background-image: url("../images/tin_candle.jpg");
+  box-shadow: inset 0px 0px 5px 5px #CD853F;
 }
 
 #box3info {
   width: 80%;
   height: auto;
   margin: 0 auto;
-  /* color: black; */
 
 }
 
@@ -88,23 +85,17 @@ h1 h2{
   font-style:italic;
   text-align: center;
 
-
-  /* text-shadow:2px 2px white; */
   }
 
 
 header {
-  /* background-image: url("../images/flowers.jpg"); */
-    background-image: url("../images/flame_unsplash.jpg");
-  /* background-color: grey; */
+  background-image: url("../images/flame_unsplash.jpg");
   background-position: center;
-  padding: 80px;
+  padding: 40px;
   filter:opacity(.9);
-    color: rgb(165,42,42);
-  /* font-weight: bolder;
-  font-style: italic; */
+  color: rgb(178,34,34);
+  box-shadow: inset 0px 0px 10px 10px #CD853F;
   font-size: 20px;
-  /* margin-right: -120px; */
 
 }
 
@@ -114,17 +105,16 @@ header {
   padding-bottom: 2%;
 }
 
-#navbar{
+/* #navbar{
   position: absolute;
   font-size: 14px;
   font-family: "Roboto";
   font-weight: bold;
 
-  }
+  } */
 
 
   #wrapper {
-    /* color: darkred; */
     font-size: 20px;
     color: 	 #0d0d0d;
     text-align: center;
